--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@
     <header>
         <h1>Meu Site de Esportes</h1>
         <nav>
-            <button id="botao1">Botão 1</button>
-            <button id="botao2">Botão 2</button>
-            <button id="botao3">Botão 3</button>
-            <button id="botao4">Botão 4</button>
-            <button id="botao5">Botão 5</button>
+            <button id="botao1">Premier</button>
+            <button id="botao2">NFL</button>
+            <button id="botao3">NBA</button>
+            <button id="botao4">italiano</button>
+            <button id="botao5">espanhol</button>
         </nav>
     </header>
     <div id="apresentacao">
-        <h2>Seja bem-vindo ao nosso site de esportes!</h2>
-        <p>Aqui você encontrará informações sobre eventos esportivos e resultados em tempo real.</p>
+        <h2>Seja bem-vindo ao nosso site<h2>
+        <p>Aqui você encontrará resultados em tempo real.</p>
     </div>
     <div id="resultados">
         <!-- Aqui serão exibidos os resultados esportivos -->
