--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 </head>
 <body>
     <header>
-        <h1>Meu Site de Esportes</h1>
+        <h1>Sport Center</h1>
         <nav>
             <button id="botao1">Premier</button>
             <button id="botao2">NFL</button>
