--- a/premier.html
+++ b/premier.html
@@ -31,19 +31,25 @@
     </div>
 
     <script>
-        // Fazendo uma solicitação à API da ESPN
-        fetch('http://site.api.espn.com/apis/site/v2/sports/soccer/eng.1/teams')
+        // Fazendo uma solicitação à API da ESPN para os resultados da Premier League
+        fetch('http://site.api.espn.com/apis/site/v2/sports/soccer/eng.1/scoreboard')
             .then(response => response.json())
             .then(data => {
                 const resultadosDiv = document.getElementById('resultados');
                 const ul = resultadosDiv.querySelector('ul');
-                
-                // Iterando pelos times da Premier League e exibindo seus nomes
-                data.sports[0].leagues[0].teams.forEach(team => {
+
+                // Verificando se há jogos na data atual
+                if (data && data.events && data.events.length > 0) {
+                    data.events[0].competitions.forEach(competition => {
+                        const li = document.createElement('li');
+                        li.textContent = `Jogo: ${competition.competitors[0].team.displayName} vs. ${competition.competitors[1].team.displayName} - Status: ${competition.status.type.description}`;
+                        ul.appendChild(li);
+                    });
+                } else {
                     const li = document.createElement('li');
-                    li.textContent = team.team.displayName;
+                    li.textContent = 'Não há jogos programados para hoje.';
                     ul.appendChild(li);
-                });
+                }
             })
             .catch(error => {
                 console.error('Erro ao buscar dados da API:', error);
