--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
     <header>
         <h1>Meu Site de Esportes</h1>
         <nav>
-            <button id="botao1">premier</button>
-            <button id="botao2">nfl</button>
+            <button id="botao1">Botão 1</button>
+            <button id="botao2">Botão 2</button>
             <button id="botao3">Botão 3</button>
             <button id="botao4">Botão 4</button>
             <button id="botao5">Botão 5</button>
@@ -76,7 +76,7 @@
     </div>
     <div id="resultados">
         <!-- O iframe para exibir a página externa -->
-        <iframe id="iframeResultado" src="" frameborder="0"></iframe>
+        <iframe id="iframeResultado" src=""></iframe>
     </div>
     <footer>
         &copy; 2023 Meu Site de Esportes
@@ -90,7 +90,7 @@
         // URLs das páginas externas
         const urlsExternas = [
             'https://bunnym9.github.io/SportCenter/premier.html',
-            'https://bunnym9.github.io/SportCenter/nfl.html,
+            'pagina2.html',
             'pagina3.html',
             'pagina4.html',
             'pagina5.html'
