--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
         #resultados {
             text-align: center;
             margin: 20px;
+            /* Adicione um espaço para o rodapé */
+            margin-bottom: 50px;
         }
 
         #resultados iframe {
@@ -53,9 +55,7 @@
             color: white;
             text-align: center;
             padding: 10px;
-            position: absolute;
-            bottom: 0;
-            width: 100%;
+            /* Remova a propriedade position: absolute */
         }
     </style>
 </head>
@@ -63,8 +63,8 @@
     <header>
         <h1>Meu Site de Esportes</h1>
         <nav>
-            <button id="botao1">Botão 1</button>
-            <button id="botao2">Botão 2</button>
+            <button id="botao1">Premier</button>
+            <button id="botao2">NFL</button>
         </nav>
     </header>
     <div id="apresentacao">
