--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Site de Esportes</title>
+    <title>Sport Center</title>
     <style>
         /* Estilos CSS */
         body {
@@ -61,7 +61,7 @@
 </head>
 <body>
     <header>
-        <h1>Meu Site de Esportes</h1>
+        <h1>Sport center</h1>
         <nav>
             <button id="botao1">Premier</button>
             <button id="botao2">NFL</button>
