--- a/nfl.html
+++ b/nfl.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resultados da NFL</title>
+    <title>Resultados e Notícias da NFL</title>
     <style>
         body {
             background-color: black;
@@ -27,39 +27,80 @@
         <h1>NFL</h1>
     </header>
     <div id="resultados">
+        <h2>Resultados</h2>
+        <ul></ul>
+    </div>
+    <div id="noticias">
+        <h2>Notícias da NFL</h2>
         <ul></ul>
     </div>
 
     <script>
-        // Fazendo uma solicitação à API da ESPN para os resultados da NFL (usando HTTPS)
-        fetch('https://site.api.espn.com/apis/site/v2/sports/football/nfl/scoreboard')
-            .then(response => response.json())
-            .then(data => {
-                const resultadosDiv = document.getElementById('resultados');
-                const ul = resultadosDiv.querySelector('ul');
+        // Função para carregar notícias da NFL
+        function carregarNoticias() {
+            // Fazendo uma solicitação à API da ESPN para as notícias da NFL (usando HTTPS)
+            fetch('https://site.api.espn.com/apis/site/v2/sports/football/nfl/news')
+                .then(response => response.json())
+                .then(data => {
+                    const noticiasDiv = document.getElementById('noticias');
+                    const ul = noticiasDiv.querySelector('ul');
 
-                // Verificando se há jogos na data atual
-                if (data && data.events && data.events.length > 0) {
-                    data.events.forEach(event => {
+                    // Verificando se há notícias disponíveis
+                    if (data && data.articles && data.articles.length > 0) {
+                        data.articles.forEach(article => {
+                            const li = document.createElement('li');
+                            li.innerHTML = `
+                                <strong>Título:</strong> <a href="${article.links.web.href}" target="_blank">${article.headline}</a><br>
+                            `;
+                            ul.appendChild(li);
+                        });
+                    } else {
                         const li = document.createElement('li');
-                        li.innerHTML = `
-                            <strong>Jogo:</strong> ${event.name}<br>
-                            <strong>Status:</strong> ${event.status.type.description}<br>
-                            <strong>Data:</strong> ${new Date(event.date).toLocaleDateString()}<br>
-                            <strong>Hora:</strong> ${new Date(event.date).toLocaleTimeString()}<br>
-                            <strong>Resultado:</strong> ${event.competitions[0].competitors[0].score} - ${event.competitions[0].competitors[1].score}<br>
-                        `;
+                        li.textContent = 'Não há notícias disponíveis no momento.';
                         ul.appendChild(li);
-                    });
-                } else {
-                    const li = document.createElement('li');
-                    li.textContent = 'Não há jogos programados para hoje.';
-                    ul.appendChild(li);
-                }
-            })
-            .catch(error => {
-                console.error('Erro ao buscar dados da API:', error);
-            });
+                    }
+                })
+                .catch(error => {
+                    console.error('Erro ao buscar notícias da API:', error);
+                });
+        }
+
+        // Função para carregar resultados da NFL
+        function carregarResultados() {
+            // Fazendo uma solicitação à API da ESPN para os resultados da NFL (usando HTTPS)
+            fetch('https://site.api.espn.com/apis/site/v2/sports/football/nfl/scoreboard')
+                .then(response => response.json())
+                .then(data => {
+                    const resultadosDiv = document.getElementById('resultados');
+                    const ul = resultadosDiv.querySelector('ul');
+
+                    // Verificando se há jogos na data atual
+                    if (data && data.events && data.events.length > 0) {
+                        data.events.forEach(event => {
+                            const li = document.createElement('li');
+                            li.innerHTML = `
+                                <strong>Jogo:</strong> ${event.name}<br>
+                                <strong>Status:</strong> ${event.status.type.description}<br>
+                                <strong>Data:</strong> ${new Date(event.date).toLocaleDateString()}<br>
+                                <strong>Hora:</strong> ${new Date(event.date).toLocaleTimeString()}<br>
+                                <strong>Resultado:</strong> ${event.competitions[0].competitors[0].score} - ${event.competitions[0].competitors[1].score}<br>
+                            `;
+                            ul.appendChild(li);
+                        });
+                    } else {
+                        const li = document.createElement('li');
+                        li.textContent = 'Não há jogos programados para hoje.';
+                        ul.appendChild(li);
+                    }
+                })
+                .catch(error => {
+                    console.error('Erro ao buscar resultados da NFL:', error);
+                });
+        }
+
+        // Carregar resultados e notícias
+        carregarResultados();
+        carregarNoticias();
     </script>
 </body>
 </html>
