--- a/premier.html
+++ b/premier.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resultados da Premier League</title>
+    <title>Notícias da Premier League</title>
     <style>
         body {
             background-color: black;
@@ -26,40 +26,43 @@
     <header>
         <h1>Premier League</h1>
     </header>
-    <div id="resultados">
+    <div id="noticias">
+        <h2>Notícias da Premier League</h2>
         <ul></ul>
     </div>
 
     <script>
-        // Fazendo uma solicitação à API da ESPN para os resultados da Premier League (usando HTTPS)
-        fetch('https://site.api.espn.com/apis/site/v2/sports/soccer/eng.1/scoreboard')
-            .then(response => response.json())
-            .then(data => {
-                const resultadosDiv = document.getElementById('resultados');
-                const ul = resultadosDiv.querySelector('ul');
+        // Função para carregar notícias da Premier League
+        function carregarNoticias() {
+            // Fazendo uma solicitação à API da ESPN para as notícias da Premier League (usando HTTPS)
+            fetch('https://site.api.espn.com/apis/site/v2/sports/soccer/eng.1/news')
+                .then(response => response.json())
+                .then(data => {
+                    const noticiasDiv = document.getElementById('noticias');
+                    const ul = noticiasDiv.querySelector('ul');
 
-                // Verificando se há jogos na data atual
-                if (data && data.events && data.events.length > 0) {
-                    data.events.forEach(event => {
+                    // Verificando se há notícias disponíveis
+                    if (data && data.articles && data.articles.length > 0) {
+                        data.articles.forEach(article => {
+                            const li = document.createElement('li');
+                            li.innerHTML = `
+                                <strong>Título:</strong> <a href="${article.links.web.href}" target="_blank">${article.headline}</a><br>
+                            `;
+                            ul.appendChild(li);
+                        });
+                    } else {
                         const li = document.createElement('li');
-                        li.innerHTML = `
-                            <strong>Jogo:</strong> ${event.name}<br>
-                            <strong>Status:</strong> ${event.status.type.description}<br>
-                            <strong>Data:</strong> ${new Date(event.date).toLocaleDateString()}<br>
-                            <strong>Hora:</strong> ${new Date(event.date).toLocaleTimeString()}<br>
-                            <strong>Resultado:</strong> ${event.competitions[0].competitors[0].score} - ${event.competitions[0].competitors[1].score}<br>
-                        `;
+                        li.textContent = 'Não há notícias disponíveis no momento.';
                         ul.appendChild(li);
-                    });
-                } else {
-                    const li = document.createElement('li');
-                    li.textContent = 'Não há jogos programados para hoje.';
-                    ul.appendChild(li);
-                }
-            })
-            .catch(error => {
-                console.error('Erro ao buscar dados da API:', error);
-            });
+                    }
+                })
+                .catch(error => {
+                    console.error('Erro ao buscar notícias da Premier League:', error);
+                });
+        }
+
+        // Carregar notícias
+        carregarNoticias();
     </script>
 </body>
 </html>
