--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sport Center</title>
+    <title>Meu Site de Esportes</title>
     <style>
         /* Estilos CSS */
         body {
@@ -13,7 +13,10 @@
         }
 
         header {
-            background-color: #333;
+            background-image: url('https://imgur.com/0rCJikj.png');
+            background-size: cover; /* Faz a imagem cobrir o elemento */
+            background-position: center; /* Centraliza a imagem horizontal e verticalmente */
+            background-repeat: no-repeat; /* Evita a repetição da imagem */
             color: white;
             text-align: center;
             padding: 10px;
@@ -48,11 +51,6 @@
         #resultados iframe {
             width: 100%;
             height: 500px; /* Altura do iframe */
-            display: none; /* Ocultar o iframe inicialmente */
-        }
-
-        #loading {
-            text-align: center;
         }
 
         footer {
@@ -66,10 +64,10 @@
 </head>
 <body>
     <header>
-        <h1>Sport center</h1>
+        <h1>Meu Site de Esportes</h1>
         <nav>
-            <button id="botao1">Premier</button>
-            <button id="botao2">NFL</button>
+            <button id="botao1">Botão 1</button>
+            <button id="botao2">Botão 2</button>
         </nav>
     </header>
     <div id="apresentacao">
@@ -79,10 +77,6 @@
     <div id="resultados">
         <!-- O iframe para exibir a página externa -->
         <iframe id="iframeResultado" src=""></iframe>
-        <!-- Conteúdo de carregamento -->
-        <div id="loading">
-            <p>Carregando...</p>
-        </div>
     </div>
     <footer>
         &copy; 2023 Meu Site de Esportes
@@ -92,7 +86,6 @@
         // JavaScript para carregar o conteúdo das páginas externas
         const iframeResultado = document.getElementById('iframeResultado');
         const botoes = document.querySelectorAll('nav button');
-        const loadingDiv = document.getElementById('loading');
 
         // URLs das páginas externas
         const urlsExternas = [
@@ -100,22 +93,10 @@
             'https://bunnym9.github.io/SportCenter/nfl.html'
         ];
 
-        // Função para carregar a página externa no iframe e mostrar o conteúdo
+        // Função para carregar a página externa no iframe
         function carregarPaginaExterna(index) {
             const urlExterna = urlsExternas[index];
             iframeResultado.src = urlExterna;
-
-            // Ocultar o iframe enquanto a página carrega
-            iframeResultado.style.display = 'none';
-
-            // Mostrar o conteúdo de carregamento
-            loadingDiv.style.display = 'block';
-
-            // Esperar um breve momento antes de mostrar o iframe (apenas para simular carregamento)
-            setTimeout(() => {
-                loadingDiv.style.display = 'none';
-                iframeResultado.style.display = 'block';
-            }, 1000); // Tempo de espera em milissegundos (1 segundo)
         }
 
         // Adicionar eventos de clique aos botões
