--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
         header {
             background-image: url('https://imgur.com/0rCJikj.png');
-            background-size: cover; /* Faz a imagem cobrir o elemento */
-            background-position: center; /* Centraliza a imagem horizontal e verticalmente */
+            background-size: cover; /* Faz a imagem cobrir todo o elemento */
+            background-position: center center; /* Centraliza a imagem horizontal e verticalmente */
             background-repeat: no-repeat; /* Evita a repetição da imagem */
             color: white;
             text-align: center;
@@ -75,6 +75,10 @@
         <p>Aqui você encontrará informações sobre eventos esportivos e resultados em tempo real.</p>
     </div>
     <div id="resultados">
+        <!-- Conteúdo inicial -->
+        <h3>Conteúdo Inicial</h3>
+        <p>Este é o conteúdo que aparecerá antes de clicar nos botões.</p>
+
         <!-- O iframe para exibir a página externa -->
         <iframe id="iframeResultado" src=""></iframe>
     </div>
