--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
         <iframe id="iframeResultado" src=""></iframe>
         <!-- Conteúdo de carregamento -->
         <div id="loading">
-            <p>Carregando...</p>
+            <p>Bem-vindo ao Sport Center: O Seu Destino para Placares e Notícias Esportivas
+
+No Sport Center, você encontrará placares atualizados em tempo real e as últimas notícias sobre seus esportes favoritos.<br> Este é o lugar ideal para os amantes do esporte se manterem informados e acompanharem suas equipes em ação.<br> Explore nosso site e mergulhe no mundo emocionante dos esportes conosco!</p>
         </div>
     </div>
     <footer>
