--- a/index.html
+++ b/index.html
@@ -146,27 +146,22 @@
                 carregarPaginaExterna(index);
             });
         });
-        const gallery = document.querySelector('.gallery');
-        const images = document.querySelectorAll('.image');
+      const gallery = document.querySelector('.gallery');
+        const images = [
+            "https://imgur.com/WSCWoNT.png",
+            "https://imgur.com/8vNvByO.png",
+            "https://imgur.com/GCv6K4q.png"
+        ];
         let currentIndex = 0;
 
         function updateGallery() {
-            const translateX = currentIndex * -100;
-            gallery.style.transform = `translateX(${translateX}%)`;
+            gallery.innerHTML = `<div class="image"><img src="${images[currentIndex]}" alt="Imagem ${currentIndex + 1}"></div>`;
         }
 
         function nextImage() {
             currentIndex++;
             if (currentIndex >= images.length) {
                 currentIndex = 0;
-            }
-            updateGallery();
-        }
-
-        function prevImage() {
-            currentIndex--;
-            if (currentIndex < 0) {
-                currentIndex = images.length - 1;
             }
             updateGallery();
         }
