--- a/index.html
+++ b/index.html
@@ -62,6 +62,21 @@
             padding: 10px;
             /* Remova a propriedade position: absolute */
         }
+        .gallery {
+    display: flex;
+    overflow: hidden;
+}
+
+.image {
+    flex: 1; /* Distribui o espaço igualmente entre as imagens */
+    padding: 10px; /* Adicione espaçamento entre as imagens, se desejado */
+    text-align: center; /* Alinha o conteúdo no centro */
+}
+
+.image img {
+    max-width: 100%; /* Garante que as imagens não ultrapassem a largura da div .image */
+    height: auto;
+}
     </style>
 </head>
 <body>
@@ -81,7 +96,18 @@
         <iframe id="iframeResultado" src=""></iframe>
         <!-- Conteúdo de carregamento -->
         <div id="loading">
-            <p>Carregando...</p>
+            <!-- Conteúdo da galeria de imagens -->
+    <div class="gallery">
+        <div class="image">
+            <img src="https://imgur.com/WSCWoNT.png" alt="Imagem 1">
+        </div>
+        <div class="image">
+            <img src="https://imgur.com/8vNvByO.png" alt="Imagem 2">
+        </div>
+        <div class="image">
+            <img src="https://imgur.com/GCv6K4q.png" alt="Imagem 3">
+        </div>
+    </div>
         </div>
     </div>
     <footer>
