--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         </div>
     </div>
     <footer>
-        &copy; 2023 Meu Site de Esportes
+        &copy; 2023 sport center
     </footer>
 
     <script>
